# aiccon_data_discovery

./: .env.example  .gitignore  README.md  parma_dati_contestuali.md  pyproject.toml
config/: sources.yaml
data/catalogue/: master_catalogue.parquet  master_map.parquet
src/: discovery_engine.py  downloader.py  search_tool.py
src/utils/: core_utils.py
